# torchode

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: python-package.yml
docs/: comparison.md  jit.ipynb
tests/: adjoint_test.py  compile_test.py  extra_args_test.py  fixed_step_controller_test.py  interpolation_test.py  problems.py  single_step_methods_test.py  step_size_controllers_test.py  stubs.py
torchode/: __init__.py  adjoints.py  interface.py  interpolation.py  problems.py  solution.py  status_codes.py  step_size_controllers.py  terms.py  typing.py
torchode/single_step_methods/: __init__.py  base.py  dopri5.py  euler.py  heun.py  runge_kutta.py  tsit5.py
